--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,105 +1,3 @@
-body::-webkit-scrollbar {
-  width: 6px; /* ширина всей полосы прокрутки */
-}
-
-body::-webkit-scrollbar-track {
-  background: transparent; /* цвет зоны отслеживания */
-}
-
-body::-webkit-scrollbar-thumb {
-  background-color: $accent; /* цвет бегунка */
-}
-
-main {
-  margin-top: 132px;
-}
-
-section {
-  &:not(:first-child) {
-    padding: 90px 0px;
-  }
-}
-
-.inp {
-  border-bottom: 1px solid rgba($color: $mainColor, $alpha: 0.3);
-  background-color: transparent;
-  outline: none;
-  width: 100%;
-
-  &::placeholder {
-    color: rgba(84, 98, 114, 0.8);
-    font-size: 16px;
-    font-weight: 300;
-  }
-}
-
-.btn {
-  display: inline-flex;
-  font-weight: 600;
-  text-transform: uppercase;
-  padding: 15px 30px;
-  border: 1px solid rgba($color: $mainColor, $alpha: 1);
-  position: relative;
-
-  &::before {
-    content: "";
-    display: flex;
-    width: 20%;
-    height: 3px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    background-color: $accent;
-    z-index: -1;
-  }
-
-  &:hover {
-    color: $white;
-
-    &::before {
-      width: 100%;
-      height: 100%;
-    }
-  }
-}
-
-.title {
-  font-size: 42px;
-  font-weight: 800;
-  line-height: 150%;
-
-  span {
-    color: $accent;
-  }
-}
-
-.section-head {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 40px;
-}
-
-.page-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 15px;
-  font-weight: 500;
-  padding: 11px 19px;
-  transition: $animation_speed;
-  border-radius: 10px;
-  border: 1px solid #ebebeb;
-  background: $white;
-  box-shadow: 0px 0px 16px 0px rgba(230, 230, 230, 0.5);
-
-  img {
-    margin-left: 5px;
-    margin-top: 2px;
-  }
-
-  &:hover {
-    border: 1px solid #dddddd;
-    box-shadow: 0px 0px 0px 0px rgba(230, 230, 230, 0.5);
-  }
+.main {
+  margin-left: 100px;
 }
