feat: merge index-menu-food in develop

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -26,6 +26,7 @@
     height: 100%;
     font-size: 25px;
     font-weight: 300;
+    text-transform: uppercase;
     border-right: 1px solid rgba($color: $accent, $alpha: 0.3);
   }
 
