--- a/src/scss/side-menu.scss
+++ b/src/scss/side-menu.scss
@@ -6,11 +6,12 @@
   height: 100vh;
   box-shadow: 0px 0px 10px rgba($color: $accent, $alpha: 0.1);
   background-color: $bodyColor;
+  transition: $animation_speed;
   z-index: 99;
+  overflow: hidden;
 
-  &.sidemenu-show {
+  &:hover {
     width: 290px;
-
     .side-menu__open {
       opacity: 0;
       width: 0;
@@ -35,20 +36,32 @@
 
   &__open {
     height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     align-items: center;
-    transform: rotate(-90deg);
-    width: 100%;
+    justify-content: center;
+    flex-direction: column;
+    transform: rotate(-180deg);
     pointer-events: all;
-    height: 100px;
     color: $accent;
     font-size: 18px;
     text-transform: uppercase;
     font-weight: 600;
     opacity: 1;
+    background-color: $bodyColor;
+
+    p {
+      writing-mode: vertical-lr;
+      text-orientation: mixed;
+    }
 
     i {
-      margin-left: 10px;
+      // margin-left: 10px;
+      margin-top: 10px;
+      transform: rotate(-90deg);
     }
   }
 
@@ -56,6 +69,8 @@
 
   &__list {
     display: none;
+    width: 290px;
+    padding: 0px 20px;
   }
 
   // .side-menu__item
@@ -77,8 +92,11 @@
   &__link {
     display: flex;
     align-items: center;
-    font-size: 18px;
+    font-size: 17px;
+    letter-spacing: 1px;
     color: $accent;
     padding: 20px 0px;
+    // font-family: $menuFont;
+    text-wrap: nowrap;
   }
 }
