--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 //&display=swap - добавить при подключении через плагин
 @import url(https://fonts.googleapis.com/css?family=Comfortaa:300,regular,500,600,700);
 @import url(https://fonts.googleapis.com/css2?family=Marck+Script&family=Train+One&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Amatic+SC:regular,700);
 
 // Подключить если есть локальные файлы шрифтов
 //@import "fonts/fonts";
@@ -18,17 +19,21 @@
 // Шрифт по умолчанию ==============================================================================================================================================================================================================================================================================
 $fontFamily: "Comfortaa", sans-serif;
 $secondaryFont: "Train One", cursive;
+$menuFont: "Amatic SC";
 
 $fontSize: rem(14); // где 14(px) - размер шрифта по умолчанию из макета
 
 // Основные цвета
-$bodyColor: #171717;
+$bodyColor: #ffffff;
 $mainColor: #171717; // Цвет шрифта по умолчанию
 // $accent: #CD0000;
-$accent: #c2ab89;
-$white: #ffffff;
+// $accent: #c2ab89;
+$accent: #9ac27c;
+$white: #171717;
 $grey: #939297;
+$orange: #ff6d00;
 $lightBlue: #d4e9f5;
+$greenAplle: #59ce65;
 $animation_speed: 0.5s;
 
 // НАСТРОЙКИ ===============================================================================================================================================================================================================================================================================================
@@ -60,9 +65,9 @@ $responsiveType: 1;
 @import "base/null";
 
 body {
+  overflow-x: hidden;
   // Скролл заблокирован
   .lock & {
-    overflow: hidden;
     touch-action: none;
   }
 
@@ -76,7 +81,7 @@ body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  position: relative;
 
   // Прижимаем footer
   > main {
