feat: menu revision

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -25,6 +25,7 @@ main {
   top: -40px;
   left: calc(50% - 37px);
   background-color: #f3f1eb;
+  cursor: pointer;
   z-index: 1;
 }
 .anchor-scroll-hint {
