--- a/src/scss/base/null.scss
+++ b/src/scss/base/null.scss
@@ -90,3 +90,24 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
+
+html {
+  &.lock {
+    body {
+      overflow: hidden;
+      position: relative;
+
+      &::before {
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: rgba($color: $mainColor, $alpha: 0.2);
+        backdrop-filter: blur(4px);
+        z-index: 100;
+      }
+    }
+  }
+}
