--- a/src/scss/side-menu.scss
+++ b/src/scss/side-menu.scss
@@ -1,17 +1,19 @@
 .side-menu {
   position: fixed;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 100px;
-  height: 100vh;
+  height: calc(100vh - 100px);
   box-shadow: 0px 0px 10px rgba($color: $accent, $alpha: 0.1);
   background-color: $bodyColor;
   transition: $animation_speed;
+  background-image: url(../img/pattern.png);
   z-index: 99;
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
 
   &:hover {
-    width: 290px;
+    width: 397.5px;
     .side-menu__open {
       opacity: 0;
       width: 0;
@@ -19,7 +21,13 @@
     }
 
     .side-menu__list {
-      display: block;
+      opacity: 1;
+      pointer-events: all;
+    }
+
+    .side-menu__item {
+      transform: translateY(0px);
+      opacity: 1;
     }
   }
 
@@ -28,8 +36,8 @@
   &__inner {
     height: 100%;
     display: flex;
-    align-items: center;
     justify-content: center;
+    padding-top: 50px;
   }
 
   // .side-menu__open
@@ -68,9 +76,12 @@
   // .side-menu__list
 
   &__list {
-    display: none;
+    display: block;
     width: 290px;
     padding: 0px 20px;
+    opacity: 0;
+    pointer-events: all;
+    transition: $animation_speed;
   }
 
   // .side-menu__item
@@ -78,6 +89,45 @@
   &__item {
     display: flex;
     align-items: center;
+    opacity: 0;
+    transition: $animation_speed;
+    transform: translateY(10px);
+
+    &:first-child {
+      transition-delay: 0.3s;
+    }
+
+    &:nth-child(2) {
+      transition-delay: 0.4s;
+    }
+
+    &:nth-child(3) {
+      transition-delay: 0.5s;
+    }
+
+    &:nth-child(4) {
+      transition-delay: 0.6s;
+    }
+
+    &:nth-child(5) {
+      transition-delay: 0.7s;
+    }
+
+    &:nth-child(6) {
+      transition-delay: 0.8s;
+    }
+
+    &:nth-child(7) {
+      transition-delay: 0.9s;
+    }
+
+    &:nth-child(8) {
+      transition-delay: 1s;
+    }
+
+    &:nth-child(9) {
+      transition-delay: 1.1s;
+    }
 
     img,
     svg {
@@ -98,5 +148,6 @@
     padding: 20px 0px;
     // font-family: $menuFont;
     text-wrap: nowrap;
+    transition: $animation_speed;
   }
 }
