--- a/src/scss/base/popup.scss
+++ b/src/scss/base/popup.scss
@@ -72,15 +72,57 @@ body::after {
   }
 }
 
-.popup__title {
-  font-size: 35px;
-  text-align: center;
-  font-weight: 600;
-  color: $mainColor;
-  margin-bottom: 15px;
-  margin-top: 20px;
+.popup__close {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
 
-  @media screen and (max-width: 540px) {
-    font-size: 25px;
+.popup-fulldescr {
+  // .popup__grid
+
+  .popup__grid {
+    // display: grid;
+    // grid-template-columns: repeat(2, 1fr);
+    // gap: 30px;
+  }
+
+  .popup-menu__close {
+    left: calc(98% - 20px);
+    top: 10px !important;
+  }
+
+  // .popup__image
+
+  .popup__image {
+    img {
+      max-width: 100%;
+      min-height: 250px;
+    }
+  }
+
+  // .popup__info
+
+  .popup__info {
+  }
+
+  // .popup__title
+
+  .popup__title {
+    font-size: 18px;
+    margin-bottom: 10px;
+    margin-top: 30px;
+  }
+
+  // .popup__price
+
+  .popup__price {
+    margin-bottom: 30px;
+  }
+
+  // .popup__descr
+
+  .popup__descr {
+    line-height: 150%;
   }
 }
