--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -52,6 +52,50 @@ main {
   }
 }
 
+.messanger {
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
+  width: auto;
+  height: auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  z-index: 99;
+
+  // .messanger__item
+
+  &__item {
+    display: flex;
+
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgba($color: $mainColor, $alpha: 0.7);
+    border-top: 1px solid rgba($color: $accent, $alpha: 0.4);
+
+    background-color: $bodyColor;
+    transition: $animation_speed;
+
+    img {
+      width: 25px;
+      height: 25px;
+      opacity: 0.7;
+    }
+
+    &:last-child {
+      border-bottom: 1px solid rgba($color: $accent, $alpha: 0.4);
+    }
+
+    &:hover {
+      background-color: #f3f1eb;
+    }
+  }
+}
+
 @keyframes scroll {
   0% {
     transform: translateY(0) translateX(-50%);
