--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -264,12 +264,37 @@ body::after {
   margin-top: 30px;
 }
 
-.popup-fulldescr .popup__price {
-  margin-bottom: 30px;
-}
-
 .popup-fulldescr .popup__descr {
   line-height: 150%;
+}
+
+.popup-fulldescr .popup__bjy {
+  margin-bottom: 30px;
+  margin-top: 10px;
+}
+
+.popup-fulldescr .popup__btn {
+  margin-top: 30px;
+  height: 50px;
+  width: 290px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #9ac27c;
+  color: #ffffff;
+  font-size: 16px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.popup-fulldescr .popup__btn:hover {
+  background-color: #74aa4b;
 }
 
 .spollers {
@@ -399,6 +424,62 @@ main {
   animation: scroll 2s infinite;
 }
 
+.messanger {
+  position: fixed;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  right: 0;
+  width: auto;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  z-index: 99;
+}
+
+.messanger__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: rgba(23, 23, 23, 0.7);
+  border-top: 1px solid rgba(154, 194, 124, 0.4);
+  background-color: #ffffff;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.messanger__item img {
+  width: 25px;
+  height: 25px;
+  opacity: 0.7;
+}
+
+.messanger__item:last-child {
+  border-bottom: 1px solid rgba(154, 194, 124, 0.4);
+}
+
+.messanger__item:hover {
+  background-color: #f3f1eb;
+}
+
 @-webkit-keyframes scroll {
   0% {
     -webkit-transform: translateY(0) translateX(-50%);
@@ -433,11 +514,46 @@ main {
   }
 }
 
+.header-underline {
+  background-color: #9ac27c;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 99;
+}
+
+.header-underline__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 10px 0px;
+}
+
+.header-underline__list a,
+.header-underline__list p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #ffffff;
+}
+
+.header-underline__list a:not(:last-child),
+.header-underline__list p:not(:last-child) {
+  margin-right: 10vw;
+}
+
 .header {
   width: 100%;
   height: 100px;
   position: fixed;
-  top: 0;
+  top: 34px;
   left: 0;
   border-bottom: 1px solid rgba(154, 194, 124, 0.3);
   background-color: #ffffff;
@@ -569,7 +685,7 @@ main {
       -ms-flex-align: center;
           align-items: center;
   padding: 30px 30px;
-  font-size: 18px;
+  font-size: 13px;
   font-weight: 600;
   -webkit-transition: 0.5s;
   transition: 0.5s;
@@ -731,7 +847,7 @@ main {
   bottom: 0;
   left: 0;
   width: 100px;
-  height: calc(100vh - 100px);
+  height: calc(100vh - 134px);
   -webkit-box-shadow: 0px 0px 10px rgba(154, 194, 124, 0.1);
           box-shadow: 0px 0px 10px rgba(154, 194, 124, 0.1);
   background-color: #ffffff;
@@ -1398,6 +1514,10 @@ main {
 .item-list__charact {
   font-size: 15px;
   color: rgba(23, 23, 23, 0.6);
+}
+
+.item-list__bjy {
+  display: none;
 }
 
 .item-list__descr {
