--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -139,7 +139,7 @@
     flex-direction: column;
     align-items: center;
     padding: 30px 30px;
-    font-size: 13px;
+    font-size: 15px;
     font-weight: 600;
     transition: $animation_speed;
 
@@ -153,7 +153,7 @@
 
     .day-number {
       font-family: $menuFont;
-      // font-size: 13px;
+      font-size: 19px !important;
       margin-top: 5px;
     }
   }
