--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -2,7 +2,6 @@
   padding: 50px 0px 50px;
   background-color: $mainColor;
   color: $bodyColor;
-  margin-left: 100px;
 
   // .footer__container
 
@@ -48,6 +47,7 @@
   // .footer__item
 
   &__item {
+    
     &:not(:last-child) {
       margin-bottom: 30px;
     }
@@ -56,10 +56,13 @@
       display: flex;
       font-size: 16px;
       color: rgba($color: $bodyColor, $alpha: 0.8);
+      font-family: $secondaryFont;
 
       &:first-child {
+        color: rgba($color: $bodyColor, $alpha: 1);
         margin-bottom: 10px;
-        font-weight: 600;
+        font-weight: 400;
+        font-family: $fontFamily;
       }
     }
   }
