--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -4,7 +4,7 @@
   background-position: center;
   background-size: cover;
   position: relative;
-  // overflow: hidden;
+  overflow: hidden;
   border-radius: 0px 0px 50px 50px;
   padding: clamp(30px, 10vw, 120px);
 
@@ -15,7 +15,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba($color: $mainColor, $alpha: .3);
+    background-color: rgba($color: $mainColor, $alpha: .6);
   }
 
   // .index-banner__container
@@ -28,7 +28,7 @@
   &__content {
     position: relative;
     z-index: 2;
-    height: calc(100vh - 120px);
+    height: calc(100vh - 250px);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -38,6 +38,12 @@
   // .index-banner__undertitle
 
   &__undertitle {
+    // margin-bottom: 20px;
+    color: #f0ece6;
+    font-weight: 400;
+    font-size: 30px;
+    font-family: $secondaryFont;
+    letter-spacing: .5px;
   }
 
   // .index-banner__title
@@ -45,7 +51,12 @@
   &__title {
     color: #f8f5f0;
     font-size: 130px;
-    font-weight: 600;
+    text-align: center;
+    letter-spacing: 3px;
+    font-weight: 900;
+    font-family: $fontFamily;
+    line-height: 120%;
+    // text-transform: uppercase;
   }
 
   // .index-banner__btns
@@ -55,7 +66,7 @@
     align-items: center;
     justify-content: center;
     gap: 20px;
-    margin-top: 100px;
+    margin-top: 60px;
   }
 
   // .index-banner__btn
@@ -65,18 +76,20 @@
     display: flex;
     align-items: center;
     justify-content:center;
-    background-color: #74aa4b;
-    border-radius: 24px;
-    font-family: serif;
-    font-size: 18px;
+    background-color: $mainColor;
+    border-radius: 8px;
+    font-family: $tildaSans;
+    font-size: 16px;
+    font-weight: 600;
 
     &:first-child{
       background-color: #f8f5f0;
-      width: 290px;
+      width: 250px;
     }
 
     &:last-child{
-      width: 220px;
+      width: 250px;
+      color: #f8f5f0;
     }
   }
 }
@@ -84,7 +97,7 @@
 
 
 .index-service {
-  padding: 100px 0px 50px;
+  padding: 50px 0px 50px;
   position: relative;
 
   // .index-banner__union
@@ -140,12 +153,15 @@
   &__item {
   }
 }
+
 .item-service {
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  background-color: #f0ece6;
+  background-color: #fff;
+  box-shadow: 0 0 4px 2px rgba(142,142,142,.05);
   border-radius: 20px;
+  height: 540px;
 
   @media (hover:hover) {
     &:hover{
@@ -173,18 +189,22 @@
   // .item-service__title
 
   &__title {
-    font-size: 24px;
+    font-size: 23px;
     font-weight: 500;
-    line-height: 150%;
+    // line-height: 0%;
     margin-bottom: 20px;
+    font-family: $fontFamily;
   }
 
   // .item-service__icon
 
   &__icon {
-    width: 20px;
-    height: 20px;
     transition: $animation_speed;
+
+    svg,img,i{
+      width: 20px;
+      height: 20px;
+    }
   }
 
   // .item-service__text
@@ -193,7 +213,8 @@
     margin-bottom: 30px;
     padding: 0px 30px 0px;
     flex: 1 1 auto;
-    font-size: 18px;
+    // font-size: 18px;
+    font-family: $secondaryFont;
     line-height: 150%;
   }
 
@@ -203,7 +224,7 @@
     overflow: hidden;
     border-radius: 50% 50% 0px 0px;
     position: relative;
-    height: 250px;
+    height: 350px;
     width: 100%;
     
     img{
@@ -215,158 +236,137 @@
 }
 
 
+.index-catalog {
+  padding: 50px 0px;
+  margin-bottom: 50px;
+  background: #ffffff;
+  border-radius: 50px;
 
-.menu-list {
-  padding: 100px 0px 50px;
-  background-color: #fffdf8;
-  color: $mainColor;
-  position: relative;
-
-  &:nth-child(even) {
-    background-color: rgba($color: #f3f1eb, $alpha: 1);
-  }
-
-  // .menu-list__container
+  // .index-catalog__container
 
   &__container {
   }
 
-  // .menu-list__inner
-
-  &__inner {
-    @media screen and (min-width: 767px) {
-      display: flex;
-    }
-  }
-
-  //   .menu-list__leftside
-  &__leftside {
-    min-width: 250px;
-  }
-
-  // .menu-list__title
+  // .index-catalog__title
 
   &__title {
-    font-size: 22px;
-    position: sticky;
-    top: 10px;
+    text-align: center;
+    margin-bottom: 15px;
+    color: $accent;
+    text-shadow: 0px 0px 2px rgba($color: #000000, $alpha: 1.0);
   }
 
-  // .menu-list__grid
+  // .index-catalog__tab
 
-  &__grid {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
-    gap: 30px 30px;
-  }
-
-  // .menu-list__item
-
-  &__item {
+  &__tab {
   }
 }
 
-.item-list {
-  &:hover {
-    .item-list__zoombtn {
-      opacity: 1;
-    }
-  }
+.tab {
+  // max-width: 1200px;
+  margin: 0 auto;
+  border-top: 1px solid rgba($color: $mainColor, $alpha: .1);
+  padding-top: 15px;
 
-  // .item-list__image
+  // .tab__head
 
-  &__image {
-    width: 100%;
-    height: 290px;
-    position: relative;
-    padding: 0px 0px 60%;
-
-    img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-position: center;
-      object-fit: cover;
-    }
-  }
-  //   .item-list__zoombtn
-  &__zoombtn {
+  &__head {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100px;
-    height: 100px;
-    background-color: rgba($color: $mainColor, $alpha: 0.7);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    opacity: 0;
-    transform: translate(-50%, -50%);
-    border-radius: 50%;
-    border: 1px solid rgba($color: $accent, $alpha: 1);
-    transition: $animation_speed;
-    z-index: 2;
-    cursor: pointer;
-
-    &::after {
-      content: "";
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 20px;
-      height: 20px;
-      background-image: url(../img/zoom-icon.png);
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-    }
-  }
-
-  // .item-list__content
-
-  &__content {
-    padding: 10px 0px;
-  }
-
-  // .item-list__leftside
-
-  &__leftside {
-  }
-
-  // .item-list__name
-
-  &__name {
-    font-size: 15px;
-    font-weight: 600;
     margin-bottom: 10px;
   }
 
-  // .item-list__charact
+  // .tab__trigger
 
-  &__charact {
-    font-size: 15px;
-    color: rgba($color: $mainColor, $alpha: 0.6);
+  &__trigger {
+    // background-color: #74aa4b;
+    padding: 10px 15px;
+    border-radius: 20px;
+    font-family: $secondaryFont;
+    letter-spacing: .5px;
+    font-size: 16px;
+    color: #51514f;
+    font-weight: 500;
+    text-transform: uppercase;
+
+    &.active{
+      opacity: .7;
+    }
+
+    &:first-child{
+      padding-left: 0px;
+    }
   }
 
-  // .item-list__bjy
-  &__bjy {
-    display: none;
+  // .tab__content
+
+  &__content {
+    
   }
 
-  // .item-list__descr
+  // .tab__content-grid
 
-  &__descr {
-    display: none;
+  &__content-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+    gap: 40px;
+   
+  }
+
+  // .tab__content-item
+
+  &__content-item {
+    // box-shadow: 0 0 4px 2px rgba(142, 142, 142, 0.05);
+  }
+
+  // .tab__content-image
+  &__content-image{
+    img{
+      max-width: 100%;
+    }
+  }
+
+  // .tab__content-name
+  &__content-name{
+    font-size: 18px;
+    font-family: $secondaryFont;
+    padding: 10px 0px 10px;
+    display: flex;
+  }
+
+  // .tab__content-price
+  &__content-price{
+    font-size: 17px;
+    font-weight: 400;
+    font-family: $secondaryFont;
+    padding: 0px 0px 20px;
+  }
+
+  // .tab__content-btns
+  &__content-btns{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+
+  // .tab__content-btn
+  &__content-btn{
+    display: flex;
+    align-items: center;
+    height: 35px;
+    padding: 0px 15px;
+    color: #51514f;
+    border: 2px solid #51514f;
+    font-weight: 700;
+    font-size: 13px;
+    font-family: $secondaryFont;
   }
 }
 
 .reviews {
   padding: 50px 0px;
-  background-color: #f3f1eb;
+  // background-color: ;
 
   // .reviews__container
 
@@ -386,6 +386,9 @@
   // .reviews__title
 
   &__title {
+    color: $accent;
+     text-shadow: 0px 0px 1px rgba($color: $mainColor, $alpha: 1.0);
+    
   }
 
   // .reviews__slider
@@ -409,7 +412,7 @@
     display: flex;
     flex-direction: column;
     height: 100% !important;
-    background-color: $bodyColor;
+    background-color: $white;
   }
 
   .swiper-slide-active {
@@ -471,7 +474,7 @@
     text-align: right;
     p {
       font-weight: 600;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
     }
 
     span {
@@ -493,13 +496,16 @@
     font-size: 15px;
     line-height: 150%;
     overflow: hidden;
+    font-family: $secondaryFont;
   }
 
   // .reviews__btn
   &__btn {
-    font-size: 16px;
-    font-weight: 800;
-    color: $accent;
+    font-size: 14px;
+    font-weight: 400;
+    color: rgba($color: $mainColor, $alpha: .8);
+    // font-family: $fontFamily;
+    font-family: $secondaryFont;
     padding: 20px 0px 0px;
     transition: $animation_speed;
 
@@ -523,7 +529,7 @@
       align-items: center;
       justify-content: center;
       width: 290px;
-      height: 50px;
+      height: 40px;
       background-color: $accent;
       color: $bodyColor;
       font-size: 15px;
@@ -551,12 +557,13 @@
     &-prev,
     &-next {
       position: relative;
-      width: 50px !important;
-      height: 50px !important;
+      width: 40px !important;
+      height: 40px !important;
       display: flex;
       align-items: center;
       justify-content: center;
       background-color: $accent;
+      border-radius: 5px;
       transition: $animation_speed;
 
       &:hover {
@@ -654,6 +661,7 @@
   // .about__content
 
   &__content {
+    font-family: $secondaryFont;
     color: $bodyColor;
     max-width: 900px;
     margin: 0 auto;
@@ -671,6 +679,7 @@
     justify-content: center;
     color: $bodyColor;
     font-size: 16px;
+    border-radius: 8px;
     background-color: $accent;
     transition: $animation_speed;
 
@@ -710,6 +719,7 @@
     text-align: center;
     color: $bodyColor;
     margin-bottom: 20px;
+
   }
 
   // .callback__subtitle
@@ -722,6 +732,7 @@
     max-width: 800px;
     margin: 0 auto;
     margin-bottom: 40px;
+    font-family: $secondaryFont;
   }
 
   // .callback__form
@@ -742,6 +753,7 @@
     width: 100%;
     border: 1px solid rgba($color: $bodyColor, $alpha: 0.7);
     padding: 0px 20px;
+    border-radius: 8px;
     color: $bodyColor;
 
     &::placeholder {
@@ -761,10 +773,68 @@
     width: 100%;
     color: $bodyColor;
     font-size: 16px;
+    border-radius: 8px;
     transition: $animation_speed;
 
     &:hover {
       background-color: #74aa4b;
+    }
+  }
+}
+
+.index-gallery {
+  padding: 50px 0px;
+
+  // .index-gallery__container
+
+  &__container {
+    max-width: 1400px;
+    margin: 0 auto;
+  }
+
+  // .index-gallery__title
+
+  &__title {
+  }
+
+  // .index-gallery__header
+
+  &__header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: $white;
+    padding: 25px;
+    border-radius: 8px;
+    margin-bottom: 30px;
+    box-shadow: 0 0 4px 2px rgba(142, 142, 142, .05);
+
+    a{
+      padding: 0px 15px;
+      font-family: $secondaryFont;
+    }
+  }
+
+  // .index-gallery__grid
+
+  &__grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(290px,1fr));
+    gap: 20px;
+    background-color: $white;
+    padding: 10px;
+    box-shadow: 0 0 4px 2px rgba(142, 142, 142, .05);
+    border-radius: 8px;
+  }
+
+  // .index-gallery__item
+
+  &__item {
+    overflow: hidden;
+    border-radius: 8px;
+
+    img{
+      max-width: 100%;
     }
   }
 }
